--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -12,6 +12,9 @@
             GitHubのコントリビューション履歴のテーブルで動画を再生するプログラムです
         </p>
         <p class="description">
+            GitHubのユーザーのページへ行き、contributions の下にある再生UIから再生してください
+        </p>
+        <p class="description">
             <strong>リポジトリ:</strong> 
             <a href="https://github.com/kuwacom/GitHub-VideoPlayer" target="_blank">
                 https://github.com/kuwacom/GitHub-VideoPlayer
