update: ページの幅を変更させる機能を追加

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -35,6 +35,15 @@
                 https://twitter.com/kuwamain/
             </a>
         </p>
+        
+        <h2 class="title">映像部分を大きくする</h2>
+        <p class="description">
+            GitHubのページの左右の余白を消し、サイズを大きくします
+        </p>
+        左側の幅: <input type="number" id="inputLeftWidth" placeholder="左側の幅(px)" value="50" class="input-field"/><br>
+        右側の幅: <input type="number" id="inputRightWidth" placeholder="右側の幅(px)" value="1200" class="input-field"/>
+        <button id="setWidth">適応</button>
+        <script src="./popup.ts"></script>
     </div>
 </body>
 </html>
