--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -36,12 +36,12 @@
             </a>
         </p>
         
-        <h2 class="title">映像部分を大きくする</h2>
+        <h2 class="subtitle">映像部分を大きくする</h2>
         <p class="description">
             GitHubのページの左右の余白を消し、サイズを大きくします
         </p>
-        左側の幅: <input type="number" id="inputLeftWidth" placeholder="左側の幅(px)" value="50" class="input-field"/><br>
-        右側の幅: <input type="number" id="inputRightWidth" placeholder="右側の幅(px)" value="1200" class="input-field"/>
+        左: <input type="number" id="inputLeftWidth" placeholder="左側の幅(px)" value="50" class="input-field"/>
+        右: <input type="number" id="inputRightWidth" placeholder="右側の幅(px)" value="1200" class="input-field"/>
         <button id="setWidth">適応</button>
         <script src="./popup.ts"></script>
     </div>
