fix: 幅設定がポップアップから出来ない不具合を修正

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -43,7 +43,7 @@
         左: <input type="number" id="inputLeftWidth" placeholder="左側の幅(px)" value="50" class="input-field"/>
         右: <input type="number" id="inputRightWidth" placeholder="右側の幅(px)" value="1200" class="input-field"/>
         <button id="setWidth">適応</button>
-        <script src="./popup.ts"></script>
+        <script type="module" src="./popup.ts"></script>
     </div>
 </body>
 </html>
